agregado el calendario y otros filtros

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,14 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=block" rel="stylesheet">
+
 <div class="mat-app-background basic-container">
     <app-toolbar></app-toolbar>
 </div>
+<hr class="mat-app-background basic-container" style="width:75%;">
+<div class=" mat-app-background basic-container ">
+    <app-table></app-table>
+</div>
 
-<div class="container main-container">
+<div class="container main-container ">
 
     <router-outlet></router-outlet>
 
