--- a/src/app/componentes/toolbar/toolbar.component.css
+++ b/src/app/componentes/toolbar/toolbar.component.css
@@ -1,3 +1,8 @@
 mat-form-field {
-    margin-right: 12px;
+    margin-right: 10px;
+}
+
+.example-button-row button,
+.example-button-row a {
+    margin-right: 8px;
 }
