--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,17 +4,20 @@
     <h3 color="accent">Reporte Consumos Detallados</h3>
 </div> -->
 
-<div class="mat-app-background basic-container">
-    <app-toolbar></app-toolbar>
-</div>
-<!-- <hr class="mat-app-background basic-container" style="width:75%;"> -->
-<div class="mat-app-background basic-container ">
-    <app-table></app-table>
-</div>
+<div class="container">
 
-<!-- Desplazarse hacia arriba-->
-<div style="z-index: 1000; padding-right: 35px; margin-bottom: -5px" class="scroll-to-top" [ngClass]="{'show-scrollTop': windowScrolled}">
-    <button mat-mini-fab color="accent" (click)="scrollToTop ()">
-          <mat-icon style="transform: rotate(270deg);">double_arrow</mat-icon>
-        </button>
+    <div class="mat-app-background basic-container">
+        <app-toolbar></app-toolbar>
+    </div>
+    <!-- <hr class="mat-app-background basic-container" style="width:75%;"> -->
+    <div class="mat-app-background basic-container ">
+        <app-table></app-table>
+    </div>
+    
+    <!-- Desplazarse hacia arriba-->
+    <div style="z-index: 1000; padding-right: 35px; margin-bottom: -5px" class="scroll-to-top" [ngClass]="{'show-scrollTop': windowScrolled}">
+        <button mat-mini-fab color="accent" (click)="scrollToTop ()">
+              <mat-icon style="transform: rotate(270deg);">double_arrow</mat-icon>
+            </button>
+    </div>
 </div>
