--- a/src/app/componentes/table/table.component.html
+++ b/src/app/componentes/table/table.component.html
@@ -19,7 +19,7 @@
         </ng-container>
 
         <ng-container matColumnDef="centro">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Centro </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Centro de Costo </th>
             <td mat-cell *matCellDef="let row"> {{row.centro}} </td>
         </ng-container>
 
