--- a/src/app/componentes/table/table.component.html
+++ b/src/app/componentes/table/table.component.html
@@ -9,9 +9,9 @@
     </mat-form-field>
     <table mat-table [dataSource]="dataSource" matSort>
 
-        <ng-container matColumnDef="tarjeta">
+        <ng-container matColumnDef="numero_tarjeta">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Tarjeta </th>
-            <td mat-cell *matCellDef="let row"> {{row.tarjeta}} </td>
+            <td mat-cell *matCellDef="let row"> {{row.numero_tarjeta}} </td>
         </ng-container>
 
         <ng-container matColumnDef="nombre">
@@ -19,24 +19,24 @@
             <td mat-cell *matCellDef="let row"> {{row.nombre}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="centro">
+        <ng-container matColumnDef="centroCosto">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Centro de Costo </th>
-            <td mat-cell *matCellDef="let row"> {{row.centro}} </td>
+            <td mat-cell *matCellDef="let row"> {{row.centroCosto}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="uo">
+        <!-- <ng-container matColumnDef="uo">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> UO </th>
             <td mat-cell *matCellDef="let row"> {{row.uo}} </td>
-        </ng-container>
+        </ng-container> -->
 
-        <ng-container matColumnDef="turno">
+        <ng-container matColumnDef="numero_turno">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Turno </th>
-            <td mat-cell *matCellDef="let row"> {{row.turno}} </td>
+            <td mat-cell *matCellDef="let row"> {{row.numero_turno}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="fecha">
+        <ng-container matColumnDef="fecha_Consumo">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha </th>
-            <td mat-cell *matCellDef="let row"> {{row.fecha}} </td>
+            <td mat-cell *matCellDef="let row"> {{row.fecha_Consumo}} </td>
         </ng-container>
 
         <ng-container matColumnDef="hora">
