--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
 
 <div class="container">
 
+    <h1 class="myTitulo">Reporte Comedor Uruguay</h1>
     <div class="mat-app-background basic-container">
         <app-toolbar></app-toolbar>
     </div>
